Correction des lang, alignement head body html,structure desktop

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -91,10 +91,10 @@ header {
         justify-content: center;
 
         .gallery-item {
+
             width: 500px;
             margin: 20px 10px 10px 10px;
-            transform: scale(1);
-            transition: transform 400ms cubic-bezier(0, 0.5,0,1);
+            transition: transform 400ms cubic-bezier(0, 0.5, 0, 1);
 
 
             &:hover {
@@ -200,10 +200,9 @@ header {
             border-top: 2px solid black;
             content: "";
             position: absolute;
-                right: 100%;
-                bottom: 2px;
-                left: 0;
-            transition: right .4s cubic-bezier(0, 0.5,0,1);
+            bottom: 2px;
+            left: 0;
+            transition: right .4s cubic-bezier(0, 0.5, 0, 1);
         }
 
         &:hover::after {
@@ -270,7 +269,7 @@ header {
         .menu-part {
             text-align: center;
 
-            
+
         }
     }
 
@@ -290,7 +289,7 @@ header {
                 }
             }
         }
-      
+
 
         hr {
             background: #C67412;
@@ -411,6 +410,7 @@ header {
         .menu-part {
 
             text-align: center;
+
             hr {
                 background: linear-gradient(to right, #45993E, #B4F679);
             }
@@ -429,6 +429,7 @@ header {
     }
 
 }
+
 @keyframes typing {
     from {
         width: 0%
@@ -441,9 +442,8 @@ header {
 
 @keyframes blink {
 
-    from,
-    to {
-        border-color: transparent
+    from {
+        border-color: transparent;
     }
 
     50% {
@@ -457,7 +457,7 @@ header {
     align-items: center;
     padding: 10px 0;
     position: fixed;
-    bottom: 0px;
+    bottom: 0;
     width: 100%;
 
     font: {
@@ -581,6 +581,7 @@ header {
         .gallery {
 
             .gallery-item {
+                
                 width: 500px;
                 margin: 30px;
             }
@@ -642,8 +643,11 @@ header {
 
         .gallery {
 
+            max-width: 1400px;
+            margin: auto;
+
             .gallery-item {
-                width: 400px;
+                width: 500px;
                 margin: 30px;
 
             }
